# colarclaw

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.backend.txt  requirements.txt
.cursor/plans/: openclaw-python-react-rewrite_b24a8f59.plan.md
.openclaw-memory/: default.sqlite  default.sqlite-shm  default.sqlite-wal
adr/: 0001-core-assistant-python-react-big-bang.md
colarclaw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
contracts/: mvp-capability-baseline.md  openapi.v1.yaml  ws-events.v1.json
deploy/: docker-compose.python-react.yml
deploy/k8s/: backend-deployment.yaml  frontend-deployment.yaml
docs/python/: agents_structure.md
runbooks/: big-bang-cutover.md  migration-checklist.md  quality-gates.md  rollback.md
scripts/: migrate_sessions.py  protocol-gen-swift.ts  protocol-gen.ts  shadow_compare.py  validate_migration.py
src/: .env.example  README.md  __init__.py  __main__.py  app.py  container.py  globals.py  main.py  polls.py  version.py
src/acp/: __init__.py  client.py  commands.py  conversation_id.py  event_mapper.py  meta.py  persistent_bindings.py  policy.py  secret_file.py  server.py  session.py  session_mapper.py  translator.py  types.py
src/agents/: __init__.py
src/api/: __init__.py  deps.py
src/auto_reply/: __init__.py  chunk.py  command_auth.py  command_detection.py  commands_args.py  commands_registry.py  dispatch.py  envelope.py  extended.py  fallback_state.py  group_activation.py  heartbeat.py  heartbeat_reply_payload.py  inbound_debounce.py  media_note.py  model.py  types.py  (+1 more)
ui/: index.html  package.json
(+706 files in other folders)
