[project]
name = "colarclaw"
version = "2025.3.12"
description = "OpenClaw Python Backend — AI assistant gateway"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "langgraph>=0.0.30",
    "PyJWT>=2.8.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
namespaces = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "I"]

[tool.pytest.ini_options]
testpaths = ["skills"]
python_files = ["test_*.py"]
